testsuite/poke.pkl/pow-f64-diag-1.pk
/* { dg-do compile } */

var res
  = (9 as uint<33>) .** 1L; /* { dg-error "invalid operand .*" } */
